--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -295,37 +295,37 @@ Exposed sun-leaves, though equipped with thermoregulatory traits, are more const
 **Photosynthesis is generally higher in exposed canopy positions-- a fact that is both theoretically expected and observed in numerous field studies (Table 2; Niinemets 2007 ; Kenzo et al. 2015 ; Slot et al. 2019; Chen et al. 2020).**
 This is primarily driven by the greater light available to sun-leaves. Photosynthesis increases with increasing irradiance, and saturates at quantum flux density of 400 $m^{-2}$ $s^{-1}$ to 700nm $m^{-2}$ $s^{-1}$.  
 
-In response to the greater light availability, sun-leaves have traits allowing greater photosynthetic rates at high light under sufficient nutrient and water conditions, including higher concentration of Rubisico, and multiple layers of palisade parenchyma. Light saturation levels differ between leaves and canopies, with leaves saturating at lower light level than canopies (while a certain amount of light saturates the photosynthetic capacity of the leaf, increasing the amount of light in the canopy may increase photosynthesis in the shaded part of the canopy).The vertical gradient in photosynthetic rates is also influenced by available concentration of N and P (and water availability).
+In response to the greater light availability, sun-leaves have traits allowing greater photosynthetic rates at high light under sufficient nutrient and water conditions, including higher concentration of Rubisco, and multiple layers of palisade parenchyma. Light saturation levels differ between leaves and canopies with leaves saturating at lower light level than canopies; while a certain amount of light saturates the photosynthetic capacity of the leaf, increasing the amount of light in the canopy may increase photosynthesis in the shaded part of the canopy.The vertical gradient in photosynthetic rates is also influenced by available concentration of N and P, and water availability.
 
-Temperature can affect photosynthesis via direct and indirect pathways. Direct, by altering photosynthetic enzyme activity and electron transport chain, and indirectly through increase in $T_{leaf}$ from $gs$ closure that is driven by biophysical factors [@lloydEffectsRisingTemperatures2008]. Photosynthesis has a peaked response to temperature. Photosynthesis is commonly found to be maximized at the prevalent ambient growing season conditions (Tan et al. 2017; @slotSituTemperatureResponse2017). Beyond the optimum, photosynthesis decreases as a result of stomatal closure and increasing $T_{leaf}$ (e.g. @slotSituTemperatureResponse2017; Smith et al. 2020 [temperate/boreal refs needed) and eventually due to biochemical constraints (@kumarathungeAcclimationAdaptationComponents2019a; e.g. Sage & Kubien 2007; Varhammer et al. 2015 ). Leaf heat stress at $40-60{^\circ}C$ can cause irreversible damage to photosystem [II] leading to leaf necrosis and eventually leaf death [Baker 2008; @feeley_thermal_2020].  
+Temperature can affect photosynthesis via direct and indirect pathways--directly, by altering photosynthetic enzyme activity and electron transport chain, and indirectly through increase in $T_{leaf}$ from $gs$ closure that is driven by biophysical factors [@lloydEffectsRisingTemperatures2008]. Photosynthesis has a peaked response to temperature, commonly found to be maximized at the prevalent ambient growing season conditions (Tan et al. 2017; @slotSituTemperatureResponse2017). Beyond the optimum, photosynthesis decreases as a result of stomatal closure and increasing $T_{leaf}$ (e.g. @slotSituTemperatureResponse2017; Smith et al. 2020 [temperate/boreal refs needed), and eventually due to biochemical constraints (@kumarathungeAcclimationAdaptationComponents2019a; e.g. Sage & Kubien 2007; Varhammer et al. 2015 ). Leaf heat stress at $40-60{^\circ}C$ can cause irreversible damage to photosystem [II], leading to leaf necrosis and eventually leaf death [Baker 2008; @feeley_thermal_2020].  
 
 **We have very little evidence as to how the temperature sensitivity of photosynthesis compares between sun and shade leaves.**
-Biophysically, we might expect sun-leaves to have a stronger temperature-dependence and higher temperature optima than shade leaves (Fig. 14.5 in Campbell and Norman 1998; *revisit this!*; @niinemetsShapeLeafPhotosynthetic1999; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. However, such a trend is not apparent among recent studies, where for 3 species in Panama, the optimum temperature for sun leaves tended to be slightly higher than that of shade leaves, but differences were not significant [Slot et al. 2019 ; @hernandezSimilarTemperatureDependence2020]. Similarly, $T_{opt}$ of $V_{max}$ and $J_{max}$ didnot vary for tropical sun- and shade-leaves  [@slotPhotosyntheticHeatTolerance2019a; @hernandezSimilarTemperatureDependence2020], and along the vertical gradient of tropical and temperate trees [@mau_temperate_2018; @millerOnlySunlitLeaves2021;@mau_temperate_2018]. 
+Biophysically, we might expect sun leaves to have a stronger temperature-dependence and higher temperature optima than shade leaves (Fig. 14.5 in Campbell and Norman 1998; *revisit this!*; @niinemetsShapeLeafPhotosynthetic1999; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. However, such a trend is not apparent among recent studies, where for 3 species in Panama, the optimum temperature for sun leaves tended to be slightly higher than that of shade leaves, but differences were not significant [Slot et al. 2019 ; @hernandezSimilarTemperatureDependence2020]. Similarly, $T_{opt}$ of $V_{max}$ and $J_{max}$ didnot vary for tropical sun- and shade-leaves  [@slotPhotosyntheticHeatTolerance2019a; @hernandezSimilarTemperatureDependence2020], and along the vertical gradient of tropical and temperate trees [@mau_temperate_2018; @millerOnlySunlitLeaves2021;@mau_temperate_2018]. 
 
-Interestingly, within canopy Japanese oak sun and shade leaves were found to maintain similar rate of excess energy production under respective peak light conditions. Excessive light energy not utilized can cause photoinhibition. Thus, sun leaves utilize this excess energy through high electron transport rate ($ETR$) and thermal dissapation, whereas shade leaves compensate for low $ETR$ by adjusting their $N_{area}$ to maintain high photosythetic capacity than those required to maximize C net gain, a suggested mechanism for cirucmventing photoinihition and thermal dissaptation under sunflecks [@kitaoLeavesJapaneseOak2012; @kitaoCanopyNitrogenDistribution2018]. Perhaps, differences in these thermal stablization strategies realizes similar $T_{opt}$ for photosynthesis in sun and shade leaves. 
+Interestingly, within-canopy Japanese oak sun and shade leaves were found to maintain similar rates of excess energy production under respective peak light conditions. Excessive light energy not utilized can cause photoinhibition. Thus, sun leaves utilize this excess energy through high electron transport rate ($ETR$) and thermal dissapation, whereas shade leaves compensate for low $ETR$ by adjusting their $N_{area}$ to maintain higher photosythetic capacity than those required to maximize C net gain, a suggested mechanism for cirucmventing photoinihition and thermal dissaptation under sunflecks [@kitaoLeavesJapaneseOak2012; @kitaoCanopyNitrogenDistribution2018]. Perhaps, differences in these thermal stablization strategies realize similar $T_{opt}$ for photosynthesis in sun and shade leaves. 
 
 **Leaf photosynthetic thermal tolerance (Tcrit/ T50)**
 
 $T_{crit}$ is the temperature at which efficiency of photosystem II starts to decrease, based on chlorphyll a flourescence; and $T_{50}$ represents temperature at which the efficiency of photosystem II had decreased by 50% [Slot et al. 2020]. 
 
-**Thermal tolerance (e.g., $T_{50}$) sparsely varies with exposure among recent studies, but there are no studies isolating effect of height.**
+**Thermal tolerance (e.g., $T_{50}$) seldom varies with exposure among recent studies, but there are no studies isolating effect of height.**
 
-In 1994, Knapp et al. showed that in tall grass prarie gallery forest in Kansas, $T_{50}$ measured on chinquapin oak (*Quercus muehlenbergii*) that grew in xeric, sunnier conditions was higher by $2{^\circ}C$ than bur oak (*Quercus macrocarpa*) that grew in shaded mesic conditions. In both species $T_{50}$ also increased from June to August. However, more recently @slotPhotosyntheticHeatTolerance2019a found that $T_{50}$ was slightly lower for shade than sun-exposed leaves for two of three species, measured near ground level, in Panama tropical forest, but results weren't significant. 
+In 1994, Knapp et al. showed that in tall grass prarie gallery forest in Kansas, $T_{50}$ measured on chinquapin oak (*Quercus muehlenbergii*) growing in xeric, sunnier conditions was higher by $2{^\circ}C$ than bur oak (*Quercus macrocarpa*) growing in shaded mesic conditions. In both species $T_{50}$ also increased from June to August. However, more recently @slotPhotosyntheticHeatTolerance2019a found that $T_{50}$ was slightly lower for shade than sun leaves for two of three species, measured near ground level, in Panama tropical forest, but results were not significant. 
 
-Further, leaf thermal tolerances are more adapted to microenvironment than macroclimate [@feeley_thermal_2020; Slot et al. 2020]. Particularly, in an Australian arid region, *Acacia Papyrocarpa* (Benth.) trees showed higher composite climate stress and greater $T_{50}$ in lower north-facing canopy than other canopy positions, that correlated with low wind-speed, greater $T_{air}$ and longer leaf thermal time constants [@curtis_intracanopy_2019]. However, more research is required to fully understand the relationship between leaf thermal tolerance and microenvironments.
+Further, leaf thermal tolerances are more closely adapted to microenvironment than macroclimate [@feeley_thermal_2020; Slot et al. 2020]. Particularly, in an Australian arid region, *Acacia papyrocarpa* (Benth.) trees showed higher composite climate stress and greater $T_{50}$ in lower north-facing canopy than other canopy positions, correlating with low wind-speed, greater $T_{air}$ and longer leaf thermal time constants [@curtis_intracanopy_2019]. However, more research is required to fully understand the relationship between leaf thermal tolerance and microenvironments.
 
 *We're not aware of any other studies on this."we may want to argue that we have no *a priori* reasons to expect thermal tolerance to scale with height per se (or do we?). I think it makes sense to expect variation with light exposure because of the associated differences in temperature you can expect the leaves to be exposed to, but height itself should not affect heat tolerance other than through associated traits perhaps"--Martijn Slot*
 
-Across species, $T_{50}$ is explained less by phylogeny [Slot et al. 2021; Perez and Feeley, 2020a] and more by leaf traits. $T_{crit}$ was found to be greater among tropical species with large leaves that had slow heating and cooling time [higher thermal time constant] whereas $T_{50}$ was greater among species' leaves that had greater LMA (greater construction costs), compared to species with low LMA [@slotLeafHeatTolerance2020]. @perezPhotosyntheticHeatTolerances2020 also found that, across species sun leaves that showed higher photosynthetic heat tolerance, experienced higher $T_{leaf_{max}}$, but showed low optimum temperature for C assimilation [$T_{opt}$] and therefore had a narrower breadth of thermal safety margins ($T_{leaf_{max}}$-$T_{50}$).
+Across species, $T_{50}$ is explained less by phylogeny [Slot et al. 2021; Perez and Feeley, 2020a] and more by leaf traits. $T_{crit}$ was found to be greater among tropical species with large leaves that had slow heating and cooling time [higher thermal time constant] whereas $T_{50}$ was greater among species' leaves with greater LMA (greater construction costs), compared to species with low LMA [@slotLeafHeatTolerance2020]. @perezPhotosyntheticHeatTolerances2020 also found that, across species sun leaves that showed higher photosynthetic heat tolerance, experienced higher $T_{leaf_{max}}$, but showed low optimum temperature for C assimilation [$T_{opt}$] and therefore had a narrower breadth of thermal safety margins ($T_{leaf_{max}}$-$T_{50}$).
 
 *If we take geographic gradients as a reliable proxy, we'd expect temperature sensitivities to reflect the environment to which the trees are adapted/ acclimatized.* Global $T_{50s}$ across latitude and climate range from ~45-50$^\circ$C (O' sullivan et al. 2017), where $T_{50}$ and $T_{crit}$ decrease with elevation among tropical forests and across latitudes [@feeley_thermal_2020;  @slotLeafHeatTolerance2020; @osullivanThermalLimitsLeaf2017]. 
  
 ### Respiration
 
-**Similar to photosynthesis, respiration tends to be higher in canopy sun-leaves (Chen et al. 2020), but temperature sensitivity of respiration--$Q_{10}$--shows no definite trend along the gradient [@bolstad_foliar_1999; Weerasinghe et al.2014].**
+**Similar to photosynthesis, respiration tends to be higher in canopy sun-leaves (Chen et al. 2020), but temperature sensitivity of respiration--$Q_{10}$--shows no definite trend along the vertical gradient [@bolstad_foliar_1999; Weerasinghe et al.2014].**
 
-A few studies have found $Q_{10}$ to be greater in upper-canopy leaves than in shaded lower-canopy leaves, with significant differences among species [@turnbullScalingFoliarRespiration2003; @harleyEffectsLightTemperature1996], whereas @griffinCanopyPositionAffects2002 found that in Populas deltoides, lower canopy leaf respiration was more sensitive to changes in $T_{air}$ than upper canopy. Other studies have observed no difference in $Q_{10}$ across species vertical profiles and seedling sun vs. shade leaves [@weerasingheCanopyPositionAffects2014; @bolstad_foliar_1999; @zaragoza-castellsDoesGrowthIrradiance2007; @zaragoza-castellsClimatedependentVariationsLeaf2008], although at Coweeta, temperate trees showed a slight tendency to increase down the canopy relative to upper-canopy leaves as $T_{air}$ increased [@bolstad_foliar_1999](*see their Fig. 1*). (*Martijn has some unpublished data on this that we might include.unpublished data showing higher Q10 in shade than in sun leaves for 10 species or so. May make sense to include here: https://github.com/EcoClimLab/vertical-thermal-review/issues/8.*). @bolstad_foliar_1999 also found evidence of acclimation, but there remained a declining trend of respiration with elevation.
-Furthermore, response of respiration to $T_{leaf}$ [partially represented  by $E_{0}$] also showed no variation in canopy positions of Quercus rubra, whereas on considering site differences, canopy-position effect in respiration was much greater in mesic sites, and seasonal effect was greater in drier sites [@xuSeasonalVariationTemperature2006].  
+A few studies have found $Q_{10}$ to be greater in upper-canopy leaves than in shaded lower-canopy leaves, with significant differences among species [@turnbullScalingFoliarRespiration2003; @harleyEffectsLightTemperature1996], whereas @griffinCanopyPositionAffects2002 found that in Populas deltoides, lower canopy leaf respiration was more sensitive to changes in $T_{air}$ than upper canopy. Other studies have observed no difference in $Q_{10}$ across species vertical profiles and in seedling sun vs. shade leaves [@weerasingheCanopyPositionAffects2014; @bolstad_foliar_1999; @zaragoza-castellsDoesGrowthIrradiance2007; @zaragoza-castellsClimatedependentVariationsLeaf2008]. Although, @bolstad_foliar_1999 found that temperate trees showed a slight tendency to increase down the canopy relative to upper-canopy leaves as $T_{air}$ increased, [@bolstad_foliar_1999](*see their Fig. 1*). (*Martijn has some unpublished data on this that we might include.unpublished data showing higher Q10 in shade than in sun leaves for 10 species or so. May make sense to include here: https://github.com/EcoClimLab/vertical-thermal-review/issues/8.*) and also found evidence of acclimation, but there remained a declining trend of respiration with topographical elevation.
+Furthermore, response of respiration to $T_{leaf}$ [partially represented  by $E_{0}$] also showed no variation within canopy positions in Quercus rubra, whereas on considering site differences, canopy-position effect in respiration was much greater in mesic sites, and seasonal effect was greater in drier sites [@xuSeasonalVariationTemperature2006].  
 
  
 ### VOC production
@@ -345,16 +345,16 @@ Vertical gradients in the biophysical environment shape which plant strategies, 
 **Vertical gradients affect tree recruitment, growth and survival, and how these respond to climatic variation.**
 More interesting in this context is how these shape differences in the climatic sensitivity of growth and mortality. There are numerous demographic differences between understory and canopy trees, which have been linked to both the physical environment and plant traits (e.g., REFS), *and we will not review those here.* *(although maybe we should put one paragraph?)*
 
-Biophysical conditions can alter tree-water dynamics and growth patterns. Greater $VPD$, atmospheric demand and low RH can be more stressful for trees, than soil moisture across biomes-including mesic forests,  as the former limits surface conductance and evapotranspiration to a greater extent than soil moisture [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016]. Along with greater VPD, increase in temperature even under adequete water can cause greater tree hydraulic stress due to altered soil-water dynamics than milder drought, in temperate species [@ruehrWaterAvailabilityDominant2016; @parkwilliamsTemperaturePotentDriver2013]. Whereas, greater $RH$ can do the opposite, where it stifles evapotranspiration thereby increasing $T_{leaf}$ [Fig.3; @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979]. Altered precipitation regimes causing drought is more detrimental to larger trees more than small trees, because limited soil-water cannot meet the evaporative demand via the long-distance water transport to the canopy [@bennettLargerTreesSuffer2015; @mcgregor_tree_nodate; @bartholomewSmallTropicalForest2020]. However, given adequate moisture to sustain high $g_s$, canopy leaves exposed to more wind and lower humidity should be more effective at cooling when $T_{air}$ exceeds physiological optima (Fig. `r fig_leaf_T`).
+Biophysical conditions can alter tree-water dynamics and growth patterns. Greater $VPD$, atmospheric demand and low RH can be more stressful for trees, than soil moisture across biomes-including mesic forests,  as the former limits surface conductance and evapotranspiration to a greater extent than soil moisture [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016]. Along with greater VPD, increase in temperature even under adequete water can cause greater tree hydraulic stress due to altered soil-water dynamics than milder drought, in temperate species [@ruehrWaterAvailabilityDominant2016; @parkwilliamsTemperaturePotentDriver2013]. Whereas, greater $RH$ can do the opposite, stifling evapotranspiration and thereby increasing $T_{leaf}$ [Fig.3; @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979]. Altered precipitation regimes causing drought are more detrimental to larger trees more than small trees, because limited soil-water cannot meet the evaporative demand via the long-distance water transport to the canopy [@bennettLargerTreesSuffer2015; @mcgregor_tree_nodate; @bartholomewSmallTropicalForest2020]. However, given adequate moisture to sustain high $g_s$, canopy leaves exposed to more wind and lower humidity should be more effective at cooling when $T_{air}$ exceeds physiological optima (Fig. `r fig_leaf_T`).
 
-Tolerance to multiple biophysical and biological stressors can differ among tree size classes, which has shown to increase with tree height and light, and resultant non-structural carbon (NSC) reserves, with smaller understory trees being more sensitive to multiple stressors [@niinemetsResponsesForestTrees2010a]. Autotrophic respiration also increases with stand age that declines NPP, whereas GPP increases with associated morphological and anatomical complexity with age [@IncreasingRespiratoryCosts]. These difference can alter tree growth patterns in response to biophysical conditions. Particularly, higher temperatures has shown to primarily reduce tree growth by altering water availability, in mesic temperate and subtropical eucalytus forests [@bowmanWarmerWorldWill2014]. Evidence in tropical forests also shows that higher nighttime temperatures is associated with decelarating tree growth rates predominantly in smaller trees but also in taller trees, perhaps due to increase in nighttime metabolic respiration that could supress growth [*Clark 2010; 2013; Feeley et al. 2007*]. . 
+Tolerance to multiple biophysical and biological stressors can differ among tree size classes, having been shown to increase with tree height and light, and resultant non-structural carbon (NSC) reserves, with smaller understory trees being more sensitive to multiple stressors [@niinemetsResponsesForestTrees2010a]. Autotrophic respiration also increases with stand age that declines NPP, whereas GPP increases with associated morphological and anatomical complexity with age [@IncreasingRespiratoryCosts]. These difference can alter tree growth patterns in response to biophysical conditions. Particularly, higher temperatures are shown to primarily reduce tree growth by altering water availability, in mesic temperate and subtropical eucalytus forests [@bowmanWarmerWorldWill2014]. Evidence in tropical forests also shows that higher nighttime temperatures are associated with decelarating tree growth rates predominantly in smaller trees but also in taller trees, perhaps due to increase in nighttime metabolic respiration that could supress growth [*Clark 2010; 2013; Feeley et al. 2007*]. . 
 
-**There is also recently emerging evidence that understory trees tend to exhibit greater growth declines with $T_{air}$ under mesic conditions.** 
+**Recently emerging evidence indicates that understory trees tend to exhibit greater growth declines with $T_{air}$ under mesic conditions.** 
 In eight forests across the northeast United States, growth rates of understory trees declined sharply at higher $T_{air}$ [Fig `r fig_treerings` **???**; @rollinsonClimateSensitivityUnderstory].
 This pattern is initially counter-intuitive in that sun-exposed leaves can experience greater elevation of $T_{leaf}$ over $T_{air}$ than shade leaves (Fig. `r fig_leaf_T` **???**). 
  It is also possible that higher temperatures reduce understorty tree growth in these forests through an indirect mechanism, such as accelerated competition under warmer temperatures. In other cases, warming is associated with taller understory trees with lower LMA that complete their lifecycle under closed-canopy temperate forests [@maesPlantFunctionalTrait2020]. 
 
-Phenologically in temperate deciduous and mesic forests, understory growth can be more sensitive to annual warming than canopy, showing earlier spring onset and later autumn senescense [Zohnner and Renner, 2019].  However, later in spring, short-term heat waves can negatively impact partially-expanded canopy leaves more than understory saplings that are buffered, by inducing leaf shedding and decreasing photosynthesis and C uptake in reflushed leaves [@filewodImpactsSpringHeat2014]. Increase in summer temperature is also associated with reduced forest carbon storage [@oishiWarmerTemperaturesReduce2018].
+Phenologically, in temperate deciduous and mesic forests, understory growth can be more sensitive to annual warming than canopy, showing earlier spring onset and later autumn senescense [Zohnner and Renner, 2019].  However, later in spring, short-term heat waves can negatively impact partially-expanded canopy leaves, by inducing leaf shedding and decreasing photosynthesis and C uptake in reflushed leaves more so than in understory saplings that are buffered [@filewodImpactsSpringHeat2014]. Increase in summer temperature is also associated with reduced forest carbon storage [@oishiWarmerTemperaturesReduce2018].
 
 
 *In this section we could perhaps also consider differences in biomass distribution between canopy trees an understory plants, and what that may mean for performance at high temperature. What I'm thinking is the temperature sensitivity of respiration that applies to leaves, stems, and roots, and even though thermal acclimation of leaf respiration is common, much less is known about acclimation of stem and root respiration, and incomplete acclimation still increases the respiration load at higher temperature. It is possible that an increased respiration load is more disadvantageous for understory plants because 1), I suspect that a greater fraction of their total biomass is life biomass that respires (as opposed dead heartwood in the stems of big trees), and 2), because they operate closer to their light compensation point, so if they lose more carbon in respiration, they would need  to make up for lost carbon in photosynthesis, but might lack sunlight to do so*
