--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -147,7 +147,7 @@ While the focus here is on vertical gradients, it is important to note that in h
 **Canopy foliage acts as the primary physical barrier between the atmosphere and the forest floor, buffering multiple aspects of the understory conditions. It is critical in influencing -- and is influenced by -- the vertical biophysical gradient (Fig. `r fig_NEON_vertical`).**
  The distribution of this foliage is structured in correspondence with the distribution of tree sizes, and successional stages within a forest, where leaf area density ($LAD$) ie. leaf area per unit volume, increases with tree-height eventually forming the canopy layer.
 
-LAD along the vertical gradient is heterogeneous, with common patterns that vary across forests. Dense canopy forests composed of broadleaf trees can have high $LAD$ in the upper canopy layers, as well as in the understory such as in tropical forests [@ashtonComparisonsStructureMixed1992; @koikeCanopyStructureTropical1993] whereas in temperate forests, although LAD is generally more concentrated in the upper-canopy, undualting patterns are formed by conifers and top vs. bottom heavy foliage trees and sometimes by dense understories [@parkerVerticalProfileCanopy1989; @terborghVerticalComponentPlant1985; @ishiiExploringRelationshipsCanopy2004a]. In open canopy forests, such as needle-leaf forests, LAD can be predominantly accumulated in the lower canopy layers [@lawLeafAreaDistribution2001; @baldocchiSeasonalVariationEnergy1997; @bonan_ecological_2016; @ishiiExploringRelationshipsCanopy2004a]. Soil moisture conditions, topography, gap formations followed by disturbance, all alter foliage patterns and further influence the formation of relatively closed vs. open canopy forests [e.g., @parkerCanopyLightTransmittance2002 ; @almeidaContrastingFireDamage2016 ; @starkReframingTropicalSavannization2020; @bonan_ecological_2016]. In addition, seasonally dry and wet conditions, deciduousness and phenology contribute to the spatial loss and gain of leaves (Parker & Tibbs 2004; @smithSeasonalDroughtrelatedChanges2019 ; @parkerConsequencesEnvironmentalHeterogeneity2019). In mixed deciduous- evergreen broadleaf forests, the fraction of deciduous trees tends to increase across tree size classes (@conditQuantifyingDeciduousnessTropical2000c, Meakem, *temperate REFS*). In this review, we focus on growing season conditions unless otherwise noted.
+LAD along the vertical gradient is heterogeneous, with common patterns that vary across forests. Dense canopy forests composed of broadleaf trees can have high $LAD$ in the upper canopy layers, as well as in the understory such as in tropical forests [@ashtonComparisonsStructureMixed1992; @koikeCanopyStructureTropical1993] whereas in temperate forests, although LAD is generally more concentrated in the upper-canopy, undualting patterns are formed by conifers and top vs. bottom heavy foliage trees and sometimes by dense understories [@parkerVerticalProfileCanopy1989; @terborghVerticalComponentPlant1985; @ishiiExploringRelationshipsCanopy2004a; @parkerCanopyLightTransmittance2002]. In open canopy forests, such as needle-leaf forests, LAD can be predominantly accumulated in the lower canopy layers [@lawLeafAreaDistribution2001; @baldocchiSeasonalVariationEnergy1997; @bonan_ecological_2016; @ishiiExploringRelationshipsCanopy2004a]. Soil moisture conditions, topography, gap formations followed by disturbance, all alter foliage patterns and further influence the formation of relatively closed vs. open canopy forests [e.g., @almeidaContrastingFireDamage2016 ; @starkReframingTropicalSavannization2020; @bonan_ecological_2016]. In addition, seasonally dry and wet conditions, deciduousness and phenology contribute to the spatial loss and gain of leaves (Parker & Tibbs 2004; @smithSeasonalDroughtrelatedChanges2019 ; @parkerConsequencesEnvironmentalHeterogeneity2019). In mixed deciduous- evergreen broadleaf forests, the fraction of deciduous trees tends to increase across tree size classes (@conditQuantifyingDeciduousnessTropical2000c, Meakem, *temperate REFS*). In this review, we focus on growing season conditions unless otherwise noted.
 
 **Light, specifically the proportion of incident light and photosynthetically active radiation (PAR), decreases from canopy tops to the forest floor, with the shape of profile modified by leaf area index (LAI), canopy height, canopy structure, and across species and forest types [Fig. `r fig_NEON_vertical`, @koike_leaf_2001].** 
 This gradient is more pronounced under dense canopies, including broad-leaf and mixed forests, than open canopy forests such as needle-leaf forests [Fig. `r fig_NEON_vertical`; @aussenacInteractionsForestStands2000a; Smith et al., 2019; Tymen et al., 2017; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019; @bartemucciOverstoryInfluencesLight2006; @baldocchiSeasonalVariationEnergy1997]. 
@@ -218,7 +218,7 @@ Closed-canopy forests, including tropical and temperate broadleaf forests, exper
 Leaf morphology adapts to the local microenvironment during leaf expansion [@zwienieckiHydraulicLimitationsImposed2004] where degrees of direct to diffused light and resultant water demands shape sun vs. shade leaves [@casasSunShadeLeaves2011; @zwienieckiHydraulicLimitationsImposed2004; @keenanGlobalLeafTrait2016; @niinemetsLeafAgeDependent2016a]. This dichotomy in leaves is observed along the vertical gradient where canopy-leaves vary dramatically from canopy-interior and understory due to the differences in biophysical conditions (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`). At greater tree height, both biological variables (tree-height) and biophysical variables (light, temperature, and evaporative demand )(Fig. `r fig_NEON_vertical`) also play a role in shaping leaf traits. 
 
 In particular, hydraulic constraints increase with height on a tree [REFS; *McDowell-isotopes book chapter*; @cobleLightAcclimationOptimizes2015; *Couvreur et al., 2018*] such that gas exchange is strongly constrained at the tops of(~100 m. tall *Sequoia sempervirens*; *Ambrose et al. 2009, 2010*).
-Isolating height (>35m) from light shows that, canopy $gs$ decreases with increasing $VPD$  [@schaferEffectTreeHeight2000; @ambroseEffectsHeightTreetop2010]. Morphologically, leaf size [Kaare H. Jensen and Maciej A. Zwieniecki, 2013] and lobation [@kusiPlasticLeafMorphology2020] have been shown to decrease, and leaf mass per area (at greater than 20m) to increase, with height  [@cobleLightAcclimationOptimizes2015; @kenzoHeightrelatedChangesLeaf2015; @rijkersEffectTreeHeight2000a; @chinLeafAcclimationLight2017]. 
+Isolating height (>35m) from light shows that, canopy $gs$ decreases with increasing $VPD$  [@schaferEffectTreeHeight2000; @ambroseEffectsHeightTreetop2010]. Morphologically, leaf size [@jensenPhysicalLimitsLeaf2013b] and lobation [@kusiPlasticLeafMorphology2020] have been shown to decrease, and leaf mass per area (at greater than 20m) to increase, with height  [@cobleLightAcclimationOptimizes2015; @kenzoHeightrelatedChangesLeaf2015; @rijkersEffectTreeHeight2000a; @chinLeafAcclimationLight2017; @marshallFoliageHeightInfluences2003]. 
 
 Disentangling tree-height related biological and biophysical drivers (Fig. `r fig_NEON_vertical`) of leaf traits remains an important area for further research, but is beyond the scope of the current review. Here, our primary interest is in how leaf traits and function vary across the vertical gradient from the canopy-top to the understory in forests. We note that patterns across light and height gradients are generally similar, at least in direction (Table 1), but likely to be modified by covarying biophysical constraints. 
 
@@ -245,14 +245,14 @@ nocite: |
 ---
 
 
-#### Morphological and physiological traits
+#### Anatomical, Morphological and Physiological traits
 
-Exposed canopy leaves are better adapted to heat and water stress than shade leaves where sun-leaves are often thicker, smaller, hairier, with greater leaf dissections [@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @sackHowStrongIntracanopy2006], with structural strategies such as leaf-angle and rolling [@niinemetsAdjustmentFoliageStructure1998, *REF*], showing greater hydraulically efficiency than shade leaves [Brodribb et al. 2010]. All these traits, collectively regulate $T_{leaf}$-photosynthetic balance. On the other hand, shaded leaves have lower convective cooling strategies, and invest more in light capture [@fauset_differencsunes_2018; @leighInfluenceLeafSize2017; Wright et al. 2019]. Under homogeneous canopy light conditions, sun-leaves in different canopy orientations are primarily shaped by differences in $T_{air_{max}}$ and $VPD$ stress [@mediavillaFoliarPlasticityRelated2019a].
+Exposed canopy environment induces traits in sun leaves that are better adaptated to heat and water stress than shade leaves through, for instance, being smaller, hairier, with greater vein density and LMA [@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @sackHowStrongIntracanopy2006; @zwienieckiHydraulicLimitationsImposed200], as well as strategies such as leaf-angle and rolling [@niinemetsAdjustmentFoliageStructure1998, *REF*]. These traits [see Table 1] collectively dissapate heat and regulate $T_{leaf}$-photosynthetic balance. Whereas, shade leaves have traits that enable rapid light capture in the diffused-light environment with sunflecks, for example greater SLA, but are more likely to get overheated than sun leaves due to greater thermal capacitance [@mathurPhotosyntheticEfficiencySun2018a; @leighInfluenceLeafSize2017; @casasSunShadeLeaves2011; @schymanskiStomatalControlLeaf2013a]. In open canopies where light is comparitevely homogenous, exposed leaves are primarily shaped by $T_{air_{max}}$ and $VPD$ stress, than solely by light [@mediavillaFoliarPlasticityRelated2019a].
 
 #### Biochemical traits
 
-Biochemical protection against foliage light and heat damage increases with irradiance.
-Caratenoids and xanthophyll pigments--violaxanthin, antheraxanthin and zeaxanthin [$VAZ$]--an antioxidant scavenging function--convert excess light into heat [@niinemetsPhotosynthesisResourceDistribution2007a; @mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. This is also important for leaf acclimation to higher temperature [@kumarathungeAcclimationAdaptationComponents2019a]. N and P are essential for photosynthetic and metabolic processes along with $VAZ$, as they contribute to enzyme formation and function, such as in Rubisco. $N_{area}$ increases in the direction of new leaf growth, where it optimizes to prevent photoinhibition in leaves vertically [@kitaoCanopyNitrogenDistribution2018]. Additionally, isoprenes in producing species facilitate higher heat tolerance in exposed canopies, making these species particularly advantageous [*REF*].
+Biochemical protection against foliage light and heat damage also increases with irradiance.
+Caratenoids and xanthophyll pigments--violaxanthin, antheraxanthin and zeaxanthin [$VAZ$]--an antioxidant scavenging function--convert excess light into heat [@niinemetsPhotosynthesisResourceDistribution2007a; @mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. This is also important for leaf acclimation to higher temperature [@kumarathungeAcclimationAdaptationComponents2019a]. N and P are essential for photosynthetic and metabolic processes along with $VAZ$, as they contribute to enzyme formation and function, such as in Rubisco. Particularly, $N_{area}$ increases in the direction of new leaf growth, where it also optimizes to prevent photoinhibition in leaves vertically [@kitaoCanopyNitrogenDistribution2018]. Additionally, isoprenes in producing species facilitate higher heat tolerance in exposed canopies, making these species more advantageous [*REF*].
 
 #### Leaf lifespan and Deciduousness ("Lifecycle / ecological traits? ")
 
@@ -287,7 +287,7 @@ nocite: |
 
 ### Stomatal conductance
 
-Exposed sun-leaves, though equipped with thermoregulatory traits, are more constrained by $gs$ than shade leaves [@sanchesDifferentialLeafTraits2010; @hernandezSimilarTemperatureDependence2020] because although evapotranspiration and $gs$ peak during the day, during the midday and afternoon $gs$ declines more steeply in sunleaves resulting in increased $T_{leaf}$ [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994b; @kosugiSeasonalFluctuationsTemperature2006]. However, $T_{opt}$ of $gs$ doesnot vary between sun and shade leaves [Slot et al. 2019]. The diurnal $gs$ pattern and resulting $A_{max}$ varies between species; for example, $gs$ is greater in angiosperms than gymnosperms [@bonan_ecological_2016; @kleinStomatalSensitivityCO22019].
+Exposed sun-leaves, though equipped with thermoregulatory traits, are more constrained by $gs$ than shade leaves [@sanchesDifferentialLeafTraits2010; @hernandezSimilarTemperatureDependence2020] because although evapotranspiration and $gs$ peak during the day, during the midday and afternoon $gs$ declines more steeply in sunleaves resulting in increased $T_{leaf}$ [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994b; @kosugiSeasonalFluctuationsTemperature2006]. The diurnal $gs$ pattern and resulting $A_{max}$ varies between species; for example, $gs$ is greater in angiosperms than gymnosperms [@bonan_ecological_2016; @kleinStomatalSensitivityCO22019]. 
 
 
 ### Photosynthesis
@@ -388,13 +388,12 @@ The complex interactions of the biophysical environment and biological--leaf tra
 ### canopy disturbance
 
 Canopies are crucial to microclimatic functioning, as they buffer several aspects of the microenvironment [Zelleweger et al. 2019]. This buffering is influenced by the hydraulogical-cycle at large [Davis et al. 2019], therefore severe droughts place canopies at risk, particularly larger trees that suffer more during droughts[Bennett et al. 2015]. Further, increase in global temperatures has shown that canopies of temperate and tropical forests function close to thermal threshold and beyond photosynthetic optimas [@mau_temperate_2018; @huangAirTemperatureOptima2019]. Increase in such canopy $T_{leaf}$ reduces forest GPP [@pauTropicalForestTemperature2018] in the tropics, where thermal limits are narrower than temperate forests [Perez and Feeley, 2018]. 
-[**to include Teskey 2015; Breashers et al. 2021**]
 
 Canopy structure affects understory species composition and soil fertility which has been shown to shift under macroclimatic warming and canopy disturbance [@majasalmiImpactTreeCanopy2020; @bertrandCommentForestMicroclimate2020; @maesPlantFunctionalTrait2020]. Macroclimatic warming will disproportionately affect the less warm-adapted functional types within the forest canopy, despite buffering dampening extreme effects, essentially creating holes in the canopy that will take a long time to refill (especially in slow-growing tropical sub-canopy specialists), with associated understory plant thermophilization (death is faster than recruitment and growth) [@duqueThermophilizationAdultJuvenile2015a; @zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013]. This imposes an increasing threat to fauna in microrefugias that are  otherwise buffered from extremes [@scheffersMicrohabitatsReduceAnimal2013].
 
 ### warming
 
-Warming shifts forest composition, from leaf metabolism to whole forest structure. At a leaf metabolism level, fluxnet global analysis shows that with temperature increase, foliage photosynthesis and respiration are coupled at different rates upto photosynthetic thermal optimum, beyond this inflection point, photosynthesis declines whereas respiration increases exponentially, therfore, moving from carbon sink to carbon source, independent of water and irradiance [@duffyHowCloseAre2021]. However, taken into account light-induced lower leaf respiration in the day, partionationing of C losses differ diurnally and seasonally across ecosytems [@keenanWidespreadInhibitionDaytime2019]. However, nitrogen that is particularly essential for plant metabolic processes has also shown to decline in forests with warming [Templer et al.].  Temperature driven photosynthesis limitation is also reducing tree growth rates, accompanying a global trend towards more frequently disturbed forests dominated by younger trees [@mcdowellPervasiveShiftsForest2020]. Further, combination of warm-season associated with increased VPD, along with drought exacerbates tree stress[@parkwilliamsTemperaturePotentDriver2013] leading to mortality [@gouldenCaliforniaForestDieoff2019], with implications for forest structure.
+Warming shifts forest composition, from leaf metabolism to whole forest structure. At a leaf metabolism level, fluxnet global analysis shows that with temperature increase, foliage photosynthesis and respiration are coupled at different rates upto photosynthetic thermal optimum, beyond this inflection point, photosynthesis declines whereas respiration increases exponentially, therfore, moving from carbon sink to carbon source, independent of water and irradiance [@duffyHowCloseAre2021]. However, taken into account light-induced lower leaf respiration in the day, partionationing of C losses differ diurnally and seasonally across ecosytems [@keenanWidespreadInhibitionDaytime2019]. However, nitrogen that is particularly essential for plant metabolic processes has also shown to decline in forests with warming [Templer et al.].  Temperature driven photosynthesis limitation is also reducing tree growth rates, accompanying a global trend towards more frequently disturbed forests dominated by younger trees [@mcdowellPervasiveShiftsForest2020]. Further, combination of warm-season associated with increased VPD, along with drought exacerbates tree stress[@parkwilliamsTemperaturePotentDriver2013] leading to mortality [@gouldenCaliforniaForestDieoff2019], with implications for forest structure. [**to include Teskey 2015; Breashers et al. 2021**]
 
 Feedback loops from loss of big trees through natural or anthropogenic disturbance (e.g.@senfCanopyMortalityHas2018a, 2020;  @mcdowellMechanismsPlantSurvival2008; @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a] would increase canopy roughness, and reductions in canopy cover is associated with reduced canopy structural complexity [@senfMappingForestDisturbance2020]. Leading to altered biophysical gradient with local heating effects [@zellweger_forest_2020; @starkReframingTropicalSavannization2020], non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020]. 
 
