--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -763,6 +763,23 @@
   number = {n/a}
 }
 
+@article{brodribbViewingLeafStructure2010,
+  title = {Viewing Leaf Structure and Evolution from a Hydraulic Perspective},
+  author = {Brodribb, Tim J. and Feild, Taylor S. and Sack, Lawren},
+  date = {2010},
+  journaltitle = {Functional Plant Biol.},
+  volume = {37},
+  pages = {488},
+  issn = {1445-4408},
+  doi = {10.1071/FP10010},
+  url = {http://www.publish.csiro.au/?paper=FP10010},
+  urldate = {2021-06-16},
+  abstract = {More than 40 000 km3 year–1 of water flows through the intricate hydraulic pathways inside leaves. This water not only sustains terrestrial productivity, but also constitutes nearly 70\% of terrestrial evapotranspiration, thereby influencing both global and local climate (Chapin et al. 2002). Thus, the central role played by leaf vascular systems in terrestrial biology provides an important context for research into the function and evolution of water transport in leaves. Significant progress has been made recently towards understanding the linkages between anatomy and water transport efficiency in leaves, and these discoveries provide a novel perspective to view the evolution of land plants.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\WAG6PI45\\Brodribb et al. - 2010 - Viewing leaf structure and evolution from a hydrau.pdf},
+  langid = {english},
+  number = {6}
+}
+
 @article{buckleyHumidityLeavesWhy2019,
   title = {The Humidity inside Leaves and Why You Should Care: Implications of Unsaturation of Leaf Intercellular Airspaces},
   shorttitle = {The Humidity inside Leaves and Why You Should Care},
@@ -1303,6 +1320,12 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\CLRI7CYA\\Corlett - 2011 - Impacts of warming on tropical lowland rainforests.pdf;C\:\\Users\\Me\\Zotero\\storage\\8SI5CSGP\\S0169534711001947.html},
   langid = {english},
   number = {11}
+}
+
+@online{CSIROPUBLISHINGFunctional,
+  title = {{{CSIRO PUBLISHING}} | {{Functional Plant Biology}}},
+  url = {https://www-publish-csiro-au.smithsonian.idm.oclc.org/fp/ExportCitation/FP10010},
+  urldate = {2021-06-16}
 }
 
 @article{cunninghamTemperateRainforestTrees2003,
@@ -2908,6 +2931,22 @@
   abstract = {The study of leaf anatomy and of the mechanisms of the opening and closing of stomatal guard cells leads one to suppose that the stomata constitute the main or even the sole regulating system in leaf transpiration. Meteorologists have developed a wide variety of formulae for estimating evaporation from vegetation that are based entirely on weather variables and take no account at all of the species composition or stomatal properties of the transpiring vegetation. These “potential evaporation” formulae are widely and, to a large degree, successfully used for estimating evaporation from vegetation that is not water-stressed. Transpiration depends on stomatal conductance, net radiation receipt and upon air saturation deficit, temperature, and wind speed. Saturation deficit and wind speed vary through leaf boundary layers, through canopies, and through the atmosphere above the canopies. The sensitivity of saturation deficit to changes in stomatal conductance depends on where the saturation deficit is measured. If all of the stomata on a single leaf change aperture in unison, there may be a substantial change in saturation deficit measured at the leaf surface but a negligible change in saturation deficit measured a centimetre or two away, outside the leaf boundary layer.},
   file = {C\:\\Users\\Me\\Zotero\\storage\\6KM2AYMZ\\S0065250408601191.html;C\:\\Users\\Me\\Zotero\\storage\\JC358H6Z\\S0065250408601191.html},
   langid = {english}
+}
+
+@article{jensenPhysicalLimitsLeaf2013b,
+  title = {Physical {{Limits}} to {{Leaf Size}} in {{Tall Trees}}},
+  author = {Jensen, Kaare H. and Zwieniecki, Maciej A.},
+  date = {2013-01-04},
+  journaltitle = {Phys. Rev. Lett.},
+  volume = {110},
+  pages = {018104},
+  publisher = {{American Physical Society}},
+  doi = {10.1103/PhysRevLett.110.018104},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.110.018104},
+  urldate = {2021-06-16},
+  abstract = {Leaf sizes in angiosperm trees vary by more than 3 orders of magnitude, from a few mm to over 1 m. This large morphological freedom is, however, only expressed in small trees, and the observed leaf size range declines with tree height, forming well-defined upper and lower boundaries. The vascular system of tall trees that distributes the products of photosynthesis connects distal parts of the plant and forms one of the largest known continuous microfluidic distribution networks. In biological systems, intrinsic properties of vascular systems are known to constrain the morphological freedom of the organism. We show that the limits to leaf size can be understood by physical constraints imposed by intrinsic properties of the carbohydrate transport network. The lower boundary is set by a minimum energy flux, and the upper boundary is set by a diminishing gain in transport efficiency.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\8M67MI7W\\Jensen and Zwieniecki - 2013 - Physical Limits to Leaf Size in Tall Trees.pdf;C\:\\Users\\Me\\Zotero\\storage\\REXNRQ63\\PhysRevLett.110.html},
+  number = {1}
 }
 
 @article{jiao-junWindProfilesTrees2004,
@@ -5823,6 +5862,13 @@
   title = {({{PDF}}) {{Resistance}} of {{African}} Tropical Forests to an Extreme Climate Anomaly},
   url = {https://www.researchgate.net/publication/351642763_Resistance_of_African_tropical_forests_to_an_extreme_climate_anomaly},
   urldate = {2021-06-15}
+}
+
+@online{PDFViewingLeaf,
+  title = {({{PDF}}) {{Viewing}} Leaf Structure and Evolution from a Hydraulic Perspective},
+  url = {https://www.researchgate.net/publication/242585578_Viewing_leaf_structure_and_evolution_from_a_hydraulic_perspective},
+  urldate = {2021-06-16},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\MQJUTIS8\\242585578_Viewing_leaf_structure_and_evolution_from_a_hydraulic_perspective.html}
 }
 
 @article{pearcyCrownArchitectureSun2005a,
